--- a/sample.env
+++ b/sample.env
@@ -1,1 +1,2 @@
-PORT=
+PORT=3000
+MONGO_URI=mongodb+srv://aurims:hdX5NioGmkLmhEqf@dorm-management-system.od7tcvi.mongodb.net/shortened-urls?retryWrites=true&w=majority&appName=dorm-management-system
